Removed padding from body to stop scrollbar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -112,12 +112,6 @@ header.welcome {
   padding: 0.2em 0;
 }
 
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
 /* Remove styling from main input */
 .ta-root.focussed .ta-scroll-window.form-control {
   border: none;
